Changed the width the logo pops to being mobile-styled to avoid overlap with FABs

--- a/css/maps.css
+++ b/css/maps.css
@@ -198,7 +198,18 @@ body, html {
 	width: calc(100% - 20px);
 }
 
-@media screen and (max-width: 420px) {
+.found-check {
+	padding-top: 5px;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.found-check  * {
+	cursor: pointer;
+}
+
+@media screen and (max-width: 850px) {
     .logo-cont {
 		position: absolute;
 		top: 0;
@@ -226,4 +237,3 @@ body, html {
 		top: 60px;
 	}
 }
-/*400px is mobile*/
